--- a/css/master.css
+++ b/css/master.css
@@ -85,6 +85,14 @@ footer {
   color : #fff;
 }
 
+#section02 {
+  font-family: 'EB Garamond', serif;
+}
+
+#section02 h2 {
+  font-family:'Iceberg', cursive;
+}
+
 
 /*
 
