--- a/css/master.css
+++ b/css/master.css
@@ -34,7 +34,7 @@ header a {
 3. une hauteur minimal à la div. (pour comprendre ce qu'est une VH : https://css-tricks.com/the-lengths-of-css/)
 */
 .hero {
-  background: rgb(05, 0, 0) url('leloupetleheron.gif') top center no-repeat;
+  background: rgb(05, 0, 0) url('esope.jpg') top center no-repeat;
   color : #000000;
   min-height: 100vh;
   background-size: cover;
@@ -92,6 +92,16 @@ footer {
 #section02 h2 {
   font-family:'Iceberg', cursive;
 }
+
+#section03  {
+  font-family: 'Patrick Hand', cursive;
+}
+
+#section03 h2  {
+  font-family: 'Patrick Hand', cursive;
+}
+
+
 
 
 /*
